--- a/satzung.tex
+++ b/satzung.tex
@@ -1,8 +1,8 @@
 %% $Project: StuStaNet-Satzung $
-%% $ProjectVersion: 1.3 $
-%% $ProjectDate: Fri, 25 Jun 1999 18:26:36 +0200 $
+%% $ProjectVersion: 3.2 $
+%% $ProjectDate: Fri, 02 Jul 1999 04:15:42 +0200 $
 %% $Source: satzung.tex $
-%% $Revision: 1.8 $
+%% $Revision: 1.12 $
 
 \documentclass[12pt]{article}
 
@@ -36,7 +36,7 @@
 \parskip1.0ex plus0.1ex minus0.1ex
 
 \title{\bf Satzung des Netzvereins StuStaNet e.V.}
-\date{14. Juli 1998}
+\date{15. Juni 1999}
 \begin{document}
 \maketitle
 
@@ -44,76 +44,75 @@
 
 \begin{Artikel}{1}{Name und Sitz}
 
-\Satz{1}{Der Verein f"uhrt den Namen {\it StuStaNet}.}
+\Satz{1}{Der Verein führt den Namen {\it StuStaNet}.}
 
-\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erh"alt
+\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erhält
 daraufhin den Namenszusatz e.V.}
 
-\Satz{3}{Sitz des Vereins ist M"unchen.}
+\Satz{3}{Sitz des Vereins ist München.}
 
 \end{Artikel}
 
 \begin{Artikel}{2}{Zweck}
 
-\Satz{1}{Zweck des Verein ist die Studentenhilfe. Dazu errichtet und 
-unterh"alt er in der Studentenstadt Freimann ein Rechnernetz mit 
-Internet-Anbindung. Dar"uber hinaus will der Verein durch 
-Informations- und Schulungsveranstaltungen den Studenten Kompetenz 
-im Umgang mit den Neuen Medien vermitteln.}
+\Satz{1}{Zweck des Verein ist die Studentenhilfe. Dazu errichtet und unterhält
+er in der Studentenstadt Freimann ein Rechnernetz mit Internet-Anbindung.
+Darüber hinaus will der Verein durch Informations- und Schulungsveranstaltungen
+den Studenten Kompetenz im Umgang mit den Neuen Medien vermitteln.}
 
-\Satz{2}{Um den Vereinszweck zu erreichen, arbeitet der Verein insbesondere
-mit dem Studentenwerk M"unchen und dem Leibniz-Rechenzentrum der Bayerischen 
+\Satz{2}{Um den Vereinszweck zu erreichen, arbeitet der Verein insbesondere mit
+dem Studentenwerk München und dem Leibniz-Rechenzentrum der Bayerischen
 Akademie der Wissenschaften zusammen.}
 
 \end{Artikel}
 
-\begin{Artikel}{3}{Gemeinn"utzigkeit}
+\begin{Artikel}{3}{Gemeinnützigkeit}
 
-Der Verein verfolgt aussschlie"slich und unmittelbar gemeinn"utzige Zwecke 
-im Sinne des Abschnitts {\it Steuerbeg"unstigte Zwecke} der Abgabenordnung.
-Der Verein ist selbstlos t"atig; er verfolgt nicht in erster Linie 
-eigenwirtschaftliche Zwecke. Mittel des Vereins d"urfen nur f"ur die 
-satzungsm"a"sigen Zwecke verwendet werden. Die Mitglieder erhalten keine 
-Zuwendungen aus Mitteln des Vereins. Es darf keine Person durch Ausgaben,
-die dem Zweck des Vereins fremd sind, oder durch unverh"altnism"a"sig hohe 
-Verg"utungen beg"unstigt werden. 
+Der Verein verfolgt aussschließlich und unmittelbar gemeinnützige Zwecke im
+Sinne des Abschnitts {\it Steuerbegünstigte Zwecke} der Abgabenordnung.  Der
+Verein ist selbstlos tätig; er verfolgt nicht in erster Linie
+eigenwirtschaftliche Zwecke. Mittel des Vereins dürfen nur für die
+satzungsmäßigen Zwecke verwendet werden. Die Mitglieder erhalten keine
+Zuwendungen aus Mitteln des Vereins. Es darf keine Person durch Ausgaben, die
+dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe Vergütungen
+begünstigt werden.
 
 \end{Artikel}
 
 
-\begin{Artikel}{4}{Gesch"aftsjahr}
+\begin{Artikel}{4}{Geschäftsjahr}
 
-Gesch"aftsjahr des Vereins ist das Kalenderjahr. Das erste Rumpfgesch"aftsjahr
-endet am 31.12.98.
+Geschäftsjahr des Vereins ist das Kalenderjahr. Das erste Rumpfgeschäftsjahr
+endet am 31.12.1998.
 
 \end{Artikel}
 
 \begin{Artikel}{5}{Allgemeine Bestimmungen}
 
-\Satz{1}{Ordnungsgem"a"s einberufene Gremien sind beschlu"sf"ahig, wenn
-mindestens zwei stimmberechtigte Mitglieder anwesend sind. Sitzungen an 
-Samstagen, Sonn- und Feiertagen sind unzul"assig, es sei denn, das Gremium 
-ist vollz"ahlig. Insbesondere ist auf die Einhaltung einer angemessenen
-Frist zwischen Einberufung und Sitzungstermin zu achten.}
+\Satz{1}{Ordnungsgemäß einberufene Gremien sind beschlußfähig, wenn mindestens
+zwei stimmberechtigte Mitglieder anwesend sind. Sitzungen an Samstagen, Sonn-
+und Feiertagen sind unzulässig, es sei denn, das Gremium ist vollzählig.
+Insbesondere ist auf die Einhaltung einer angemessenen Frist zwischen
+Einberufung und Sitzungstermin zu achten.}
 
-\Satz{2}{Gew"ahlt ist, wer mehr als die H"alfte der g"ultig abgegebenen
-Stimmen erh"alt. Erreicht dies kein Kandidat, findet eine Stichwahl zwischen
-den beiden bestplazierten statt.}
+\Satz{2}{Gewählt ist, wer mehr als die Hälfte der gültig abgegebenen Stimmen
+erhält. Erreicht dies kein Kandidat, findet eine Stichwahl zwischen den beiden
+bestplazierten statt.}
 
-\Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den 
-Vorstand weitergeleitet. Beschl"usse werden vom Vorstand im Netz
-veröffentlicht. Einspruch ist binnen zweier Monate nach der Ver"offentlichung
-an den Vorstand zu richten.}
+\Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den Vorstand
+weitergeleitet. Beschlüsse werden vom Vorstand im Netz veröffentlicht.
+Einspruch ist binnen zweier Monate nach der Veröffentlichung an den Vorstand zu
+richten.}
 
-\Satz{4}{Von dieser Satzung, allen Vereins- und Gesch"aftsordnungen, 
-und den Nutzungsbedingungen mu"s die aktuelle Fassung im Netz zug"anglich sein.}
+\Satz{4}{Von dieser Satzung, allen Vereins- und Geschäftsordnungen, und den
+Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 
-\Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6,
-80805 M"un\-chen, wird eine Anschlagtafel angebracht. Diese ist der 
-offizielle Vereinsanzeiger. Hat ein Mitglied keine Gelegenheit, den 
-Vereinsanzeiger einzusehen, so kann er bis 1. April bzw. 1. Oktober f"ur das 
-jeweils folgende Semester beim Vorstand schriftlich beantragen, auf dem 
-Postweg zu den Versammlungen eingeladen zu werden.}
+\Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
+Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
+Vereinsanzeiger. Hat ein Mitglied keine Gelegenheit, den Vereinsanzeiger
+einzusehen, so kann er bis 1. April bzw. 1. Oktober für das jeweils folgende
+Semester beim Vorstand schriftlich beantragen, auf dem Postweg zu den
+Versammlungen eingeladen zu werden.}
 
 \end{Artikel}
 
@@ -121,101 +120,98 @@ Postweg zu den Versammlungen eingeladen zu werden.}
 
 \begin{Artikel}{6}{Mitglieder}
 
-\Satz{1}{Jeder Bewohner der Studentenstadt kann regelm"a"sig Mitglied werden. 
-Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch 
-Ausstellung einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.
-Art. 10 Abs. 3 ist anzuwenden.}
-
-\Satz{2}{Es kann eine Aufnahmegeb"uhr erhoben werden. "Uber die H"ohe
-entscheidet die Mitgliedervollversammlung.}
+\Satz{1}{Jeder Bewohner der Studentenstadt kann regelmäßig Mitglied werden. 
+Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung
+einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.  Art. 10
+Abs. 3 ist anzuwenden.}
 
 \end{Artikel}
 
 \begin{Artikel}{7}{Rechte und Pflichten}
 
-\Satz{1}{Jedes Mitglied hat eine Stimme auf der Mitgliedervollversammlung 
-und der Hausmitgliederversammlung seines Hauses.}
+\Satz{1}{Jedes Mitglied hat eine Stimme auf der Mitgliedervollversammlung und
+der Hausmitgliederversammlung seines Hauses.}
 
-\Satz{2}{Es erhalten grunds"atzlich nur Mitglieder Netzzugang. Der 
-Administratorenrat erl"a"st verbindliche Nutzungsbedingungen.}
+\Satz{2}{Es erhalten grundsätzlich nur Mitglieder Netzzugang. Der
+Administratorenrat erläßt verbindliche Nutzungsbedingungen.}
 
-\Satz{3}{Anschriften"anderungen sind dem Vorstand unverz"uglich anzuzeigen.}
+\Satz{3}{Anschriftenänderungen sind dem Vorstand unverzüglich anzuzeigen.}
 
 \end{Artikel}
 
 %\pagebreak
 
-\begin{Artikel}{8}{Beitr"age}
+\begin{Artikel}{8}{Beiträge}
 
-\Satz{1}{Es werden Semesterbeitr"age erhoben. "Uber die H"ohe beschlie"st die 
-Mitgliedervollversammlung. Semesterbeitr"age sind 
-unaufgefordert bis \mbox{1. April} bzw. \mbox{1. Oktober} f"ur das folgende 
-Semester im voraus zu leisten. Bei Beitragsr"uckstand erfolgt die Streichung 
-aus der Mitgliederliste gem"a"s Art. 10.}
+\Satz{1}{Es werden Semesterbeiträge erhoben. Über die Höhe beschließt die
+Mitgliedervollversammlung. Semesterbeiträge sind unaufgefordert bis \mbox{1.
+April} bzw. \mbox{1. Oktober} für das folgende Semester im voraus zu leisten.
+Bei Beitragsrückstand erfolgt die Streichung aus der Mitgliederliste gemäß Art.
+10.}
 
-\Satz{2}{Die ordentliche Mitgliedervollversammlung kann eine 
-Sonderumlage zur Finanzierung wichtiger Anschaffungen beschlie"sen. 
-Die H"ohe ist auf die H"alfte eines Semesterbeitrags beschr"ankt.}
+\Satz{2}{Es werden Aufnahmebeiträge erhoben. Über die Höhe befindet die
+Mitgliedervollversammlung, oder bis zur Höhe von 40 DM der Vorstand.}
 
 \end{Artikel}
 
 \begin{Artikel}{9}{Ehrenmitglieder}
 
-\Satz{1}{Personen, die sich f"ur den Verein besonders eingesetzt haben,
-k"onnen auf Antrag eines Hauses, des Vorstands oder des Administratorenrats
-von der Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
+\Satz{1}{Personen, die sich für den Verein besonders eingesetzt haben, können
+auf Antrag eines Hauses, des Vorstands oder des Administratorenrats von der
+Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
 
-\Satz{2}{Die Ehrenmitgliedschaft ist auf f"unf Jahre befristet. Der
-Vorstand kann sie auf Antrag des Ehrenmitgliedes um jeweils f"unf Jahre
-verl"angern.}
+\Satz{2}{Die Ehrenmitgliedschaft ist auf fünf Jahre befristet. Der Vorstand
+kann sie auf Antrag des Ehrenmitgliedes um jeweils fünf Jahre verlängern.}
 
-\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. 
-Sie besitzen kein passives Wahlrecht.}
+\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. Sie besitzen
+kein passives Wahlrecht.}
 
 \end{Artikel}
 
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
-\Satz{1}{Die Mitgliedschaft ist grunds"atzlich auf acht Semester befristet.
-Sie kann vom Vorstand auf Antrag um jeweils zwei Semester verl"angert werden.}
+\Satz{1}{Die Mitgliedschaft ist grundsätzlich auf acht Semester befristet.
+Sie kann vom Vorstand auf Antrag um jeweils zwei Semester verlängert werden.}
 
 \Satz{2}{Die Mitgliedschaft endet desweiteren:
 \begin{itemize}
 \item mit dem Tod des Mitglieds;
-\item durch schriftliche Austrittserkl"arung, die einen Monat im voraus an
+\item durch schriftliche Austrittserklärung, die einen Monat im voraus an
 ein Vorstandsmitglied zu richten ist. 
-\item durch Ausschlu"s aus dem Verein;
+\item durch Ausschluß aus dem Verein;
 \item durch Streichung aus der Mitgliederliste.
 \end{itemize}
-Bereits geleistete Semesterbeitr"age werden anteilig zur"uckerstattet.}
+Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet.}
 
-\Satz{3}{Ein Mitglied, das in erheblichem Ma"s gegen die Vereinsinteressen
-versto"sen hat, kann durch Beschlu"s des Vorstands aus dem Verein 
-ausgeschlossen werden. Vor dem Ausschlu"s ist das betroffene Mitglied 
-schriftlich zu h"oren. Die Entscheidung "uber den Aussschlu"s ist schriftlich 
-zu begr"unden und dem Mitglied mit Einschreiben 
-gegen R"uckschein an seine letztbekannte Anschrift zuzustellen. Das Mitglied
-kann innerhalb einer Frist von einem Monat ab Zugang schriftlich Berufung beim 
-Vorstand einlegen. "Uber die Berufung entscheidet die 
-Mitgliedervollversammlung. Macht das Mitglied vom Recht der Berufung 
-innerhalb der Frist keinen Gebrauch, unterwirft es sich dem 
-Ausschlie"sungsbeschlu"s.}
+\Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
+verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
+werden. Vor dem Ausschluß ist das betroffene Mitglied schriftlich zu hören. Die
+Entscheidung über den Aussschluß ist schriftlich zu begründen und dem Mitglied
+mit Einschreiben gegen Rückschein an seine letztbekannte Anschrift zuzustellen.
+Das Mitglied kann innerhalb einer Frist von einem Monat ab Zugang schriftlich
+Berufung beim Vorstand einlegen. Über die Berufung entscheidet die
+Mitgliedervollversammlung. Macht das Mitglied vom Recht der Berufung innerhalb
+der Frist keinen Gebrauch, unterwirft es sich dem Ausschließungsbeschluß.}
 
-\Satz{4}{Die Streichung des Mitglieds aus der Mitgliederliste erfolgt durch
-den Vorstand, wenn das Mitglied einen Monat mit dem Semesterbeitrag in Verzug 
-ist und diesen Betrag auch nach schriftlicher Mahnung durch den Vorstand nicht
-innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte 
-Anschrift des Mitglieds voll entrichtet. In der Mahnung mu"s auf die 
+\Satz{4}{Die Streichung des Mitglieds aus der Mitgliederliste erfolgt durch den
+Vorstand, wenn das Mitglied einen Monat mit dem Semesterbeitrag in Verzug ist
+und diesen Betrag auch nach schriftlicher Mahnung durch den Vorstand nicht
+innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte
+Anschrift des Mitglieds voll entrichtet. In der Mahnung muß auf die
 bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
+
+\Satz{5}{Die Streichung erfolgt ebenfalls, wenn sich das Mitglied nicht bis zum
+14. Mai eines jeden Jahres beim Vorstand rückgemeldet hat. Artikel 10, Abs. 4
+ist entsprechend anzuwenden.}
 
 \end{Artikel}
 
-\Abschnitt{Verm"ogen}
+\Abschnitt{Vermögen}
 
-\begin{Artikel}{11}{Geldverm"ogen}
+\begin{Artikel}{11}{Geldvermögen}
 
-\Satz{1}{Die Geldmittel des Vereins werden vom Schatzmeister verwaltet. 
-Die Buch\-f"uhrung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu 
+\Satz{1}{Die Geldmittel des Vereins werden vom Schatzmeister verwaltet.  Die
+Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
 richten.}
 
 \Satz{2}{Die Schatzmeister erstellt einen Haushaltsplan und einen
@@ -223,32 +219,31 @@ Liquiditätsplan.}
 
 \end{Artikel}
 
-\begin{Artikel}{12}{Sachverm"ogen}
+\begin{Artikel}{12}{Sachvermögen}
 
-\Satz{1}{Die Sachmittel des Vereins werden von den Hausadministratoren, von 
-den Sonderadministratoren, vom Vorsitzenden des Administratorenrates oder 
-vom Vorstand verwaltet, abh"angig davon, ob mit ihnen Aufgaben der H"auser, 
-des Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten 
-werden.}
+\Satz{1}{Die Sachmittel des Vereins werden von den Hausadministratoren, von den
+Sonderadministratoren, vom Vorsitzenden des Administratorenrates oder vom
+Vorstand verwaltet, abhängig davon, ob mit ihnen Aufgaben der Häuser, des
+Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten werden.}
 
 \end{Artikel}
 
-\begin{Artikel}{13}{Gewalt "uber das Rechnernetz}
+\begin{Artikel}{13}{Gewalt über das Rechnernetz}
 
-\Satz{1}{Das Rechnernetz ist bis zu den Endger"aten durch Vereinseigentum
-aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abh"angen. 
-Hardware des Studentenwerks, von beauftragten Firmen, des Leibniz-Rechenzentrums
-oder anderer "offentlicher Einrichtungen sind davon ausgenommen.}
+\Satz{1}{Das Rechnernetz ist bis zu den Endgeräten durch Vereinseigentum
+aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abhängen. 
+Hardware des Studentenwerks, von beauftragten Firmen, des
+Leibniz-Rechenzentrums oder anderer öffentlicher Einrichtungen sind davon
+ausgenommen.}
 
-\Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder
-anderen Netzkomponenten werden regelm"a"sig nur Administratoren sowie
-Beauftragten des Studentenwerks einger"aumt. 
-"Uber begr"undete Ausnahmen beschlie"st der Administratorenrat im Einvernehmen
-mit dem Vorstand.}
+\Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder anderen
+Netzkomponenten werden regelmäßig nur Administratoren sowie Beauftragten des
+Studentenwerks eingeräumt. Über begründete Ausnahmen beschließt der
+Administratorenrat im Einvernehmen mit dem Vorstand.}
 
-\Satz{3}{Der Vorsitzende des Administratorenrates f"uhrt eine Liste, wer 
-auf welchem der vereinseigenen Rechner oder anderen Netzkomponenten 
-weitergehende Rechte besitzt.}
+\Satz{3}{Der Vorsitzende des Administratorenrates führt eine Liste, wer auf
+welchem der vereinseigenen Rechner oder anderen Netzkomponenten weitergehende
+Rechte besitzt.}
 
 \end{Artikel}
 
@@ -259,16 +254,15 @@ weitergehende Rechte besitzt.}
 \Satz{1}{Organe des Vereins sind  
 \begin{itemize}
 \item die Mitgliedervollversammlung
-\item die H"auser
+\item die Häuser
 \item der Vorstand
 \item der Administratorenrat.
 \end{itemize}}
 
-\Satz{2}{Die Vertretung nach au"sen im Sinne des \S 26 BGB "uben immer zwei
-Vorstandsmitglieder gemeinsam aus. Mit Wirkung gegen Dritte wird allen 
-Organen untersagt, ohne Zustimmung der Mitgliedervollversammlung 
-Kredite oder andere Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren
-aufzunehmen.}
+\Satz{2}{Die Vertretung nach außen im Sinne des \S 26 BGB üben immer zwei
+Vorstandsmitglieder gemeinsam aus. Mit Wirkung gegen Dritte wird allen Organen
+untersagt, ohne Zustimmung der Mitgliedervollversammlung Kredite oder andere
+Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
 
 \end{Artikel}
 
@@ -276,96 +270,93 @@ aufzunehmen.}
 
 \begin{Artikel}{15}{Aufgaben}
 
-\Satz{1}{Die Mitgliedervollversammlung k"ummert sich um alle Fragen mit
-zentraler Bedeutung f"ur den Gesamtverein.}
+\Satz{1}{Die Mitgliedervollversammlung kümmert sich um alle Fragen mit
+zentraler Bedeutung für den Gesamtverein.}
 
 \Satz{2}{Sie hat insbesondere folgende Aufgaben:
 \begin{itemize}
-\item Genehmigung des Haushaltsplans f"ur das folgende Gesch"aftsjahr
+\item Genehmigung des Haushaltsplans für das folgende Geschäftsjahr
 \item Entgegennahme des Rechenschaftsberichts des Vorstands und dessen 
 Entlastung
 \item Wahl des Vorstands, der Sonderadministratoren und des 
-Kassenpr"ufungsausschusses
-\item Festsetzung der H"ohe des Mitgliedsbeitrags und der Aufnahmegeb"uhren
-\item Beschlu"sfassung "uber Satzungs"anderungen und Vereinsaufl"osung
-\item Beschlu"sfassung "uber die Berufung eines Mitglieds gegen einen 
-Ausschlu"s durch den Vorstand
+Kassenprüfungsausschusses
+\item Festsetzung der Höhe des Mitgliedsbeitrags und der Aufnahmegebühren
+\item Beschlußfassung über Satzungsänderungen und Vereinsauflösung
+\item Beschlußfassung über die Berufung eines Mitglieds gegen einen 
+Ausschluß durch den Vorstand
 \end{itemize}}
 
-\Satz{3}{Sie kann eine Rahmengesch"aftsordnung f"ur alle Vereinsgremien, eine
+\Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
 Beitragsordnung oder eine Haushaltsordnung erlassen.}
 
-\Satz{4}{"Uber die Beschl"usse der Mitgliedervollversammlung ist ein 
-Protokoll aufzunehmen, vom Versammlungsleiter zu unterzeichnen 
-und vom Vorstand zu ver\-"offent\-lichen.}
+\Satz{4}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll
+aufzunehmen, vom Versammlungsleiter zu unterzeichnen und vom Vorstand zu
+ver\-öffent\-lichen.}
 
 \end{Artikel}
 
 \begin{Artikel}{16}{Einberufung}
 
-\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal 
-j"ahrlich, und zwar in den Zeitr"aumen 1. - 15. Juni und 
-1. - 15. Dezember, statt.}
+\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
+und zwar in den Zeiträumen 1. - 15. Juni und 1. - 15. Dezember, statt.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung 
-vom Vorstand durch Aushang im Vereinsanzeiger eingeladen, wobei der Tag der 
-Ver\-"offent\-lichung und der Tag der Versammlung nicht mitgez"ahlt werden.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung vom
+Vorstand durch Aushang im Vereinsanzeiger eingeladen, wobei der Tag der
+Ver\-öffent\-lichung und der Tag der Versammlung nicht mitgezählt werden.}
 
-\Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom 
-Vorstand festgesetzte Tagesordnung mitzuteilen.}
+\Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom Vorstand
+festgesetzte Tagesordnung mitzuteilen.}
 
-\Satz{4}{Der Vorstand hat unverz"uglich  eine au"serordentliche 
+\Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche
 Mitgliedervollversammlung einberufen, wenn das Vereinsinteresse es erfordert
-oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich 
-unter Angabe des Zwecks und der Gr"unde fordern.}
+oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich
+unter Angabe des Zwecks und der Gründe fordern.}
 
 \end{Artikel}
 
-\UAbschnitt{H"auser} 
+\UAbschnitt{Häuser} 
 
-\begin{Artikel}{17}{Gliederung in H"auser}
+\begin{Artikel}{17}{Gliederung in Häuser}
 
-\Satz{1}{Der Verein ist in H"auser untergliedert. Die H"auser regeln ihre
-Belange selbst. Der Vorstand kann den H"ausern Weisungen erteilen.}
+\Satz{1}{Der Verein ist in Häuser untergliedert. Die Häuser regeln ihre Belange
+selbst. Der Vorstand kann den Häusern Weisungen erteilen.}
 
-\Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet, von dem 
-die Funktion des Gesamtnetzes nicht abh"angig sein darf.}
+\Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet, von dem die
+Funktion des Gesamtnetzes nicht abhängig sein darf.}
 
-\Satz{3}{Die Mitglieder k"onnen die Zuordnung zu den H"ausern nicht w"ahlen.
-Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der 
+\Satz{3}{Die Mitglieder können die Zuordnung zu den Häusern nicht wählen. 
+Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
 Vorstand.}
 
 \end{Artikel}
 
-\begin{Artikel}{18}{Zust"andigkeit}
+\begin{Artikel}{18}{Zuständigkeit}
 
-\Satz{1}{Die H"auser organisieren das Vereinsleben auf Hausebene.}
+\Satz{1}{Die Häuser organisieren das Vereinsleben auf Hausebene.}
 
-\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie.
-Die technischen Standards des Administratorenrates werden dabei von
-ihnen beachtet.}
+\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie. Die
+technischen Standards des Administratorenrates werden dabei von ihnen beachtet.}
 
 \end{Artikel}
 
 \begin{Artikel}{19}{Hausadministratoren}
 
-\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 
-Mitgliedern darf ein weiterer gewählt werden. Ausschlaggebend ist die 
-Mitgliederzahl am \mbox{1. Januar} des jeweiligen Jahres.}
+\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 Mitgliedern
+darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
+\mbox{1. Januar} des jeweiligen Jahres.}
 
-\Satz{2}{Die Hausadministratoren leiten ihre H"auser, verwalten die
-Hausnetze und sind Mitglied im Administratorenrat.}
+\Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
+und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom 
-\mbox{1. Juni} bis 30. November und vom \mbox{1. Dezember} bis 
-\mbox{31. Mai}.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom \mbox{1. Juni} bis
+30. November und vom \mbox{1. Dezember} bis \mbox{31. Mai}.}
 
-\Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.
-Dieser f"uhrt eine Liste der derzeitig t"atigen Administratoren. Mit der
-Aufnahme in diese Liste ist der Gew"ahlte zum Administrator bestellt.}
+\Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
+führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
+diese Liste ist der Gewählte zum Administrator bestellt.}
 
-\Satz{5}{W"ahlt ein Haus nicht mindestens einen Hausadministrator, oder 
-sind alle Hausadministratorenstellen eines Hauses verwaist, so setzt der 
+\Satz{5}{Wählt ein Haus nicht mindestens einen Hausadministrator, oder sind
+alle Hausadministratorenstellen eines Hauses verwaist, so setzt der
 Administratorenrat einen Hausadministrator ein.}
 
 \end{Artikel}
@@ -374,30 +365,30 @@ Administratorenrat einen Hausadministrator ein.}
 
 \Satz{1}{Die Hausmitgliederversammlung regelt alle Belange ihres Hauses.}
 
-\Satz{2}{Sie w"ahlt die Hausadministratoren, "uberwacht deren 
-Amtsf"uhrung und beschlie"st "uber ihre Entlastung.}
+\Satz{2}{Sie wählt die Hausadministratoren, überwacht deren Amtsführung und
+beschließt über ihre Entlastung.}
 
-\Satz{3}{Die Hausadministratoren legen ihr Fragen von besonderem Gewicht
-zur Entscheidung vor.}
+\Satz{3}{Die Hausadministratoren legen ihr Fragen von besonderem Gewicht zur
+Entscheidung vor.}
 
-\Satz{4}{Den Vorsitz f"uhrt in der Regel einer der Hausadministratoren
-des Hauses.}
+\Satz{4}{Den Vorsitz führt in der Regel einer der Hausadministratoren des
+Hauses.}
 
 \end{Artikel}
 
 \begin{Artikel}{21}{Einberufung}
 
-\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal 
-j"ahrlich, und zwar in den Zeit\-r"aumen 15. - 31. Mai und 15. - 30. November, 
-statt. Sie wird in der Regel von einem der Hausadministratoren des Hauses, im
-Ausnahmefall vom Vorstand einberufen.}
+\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
+und zwar in den Zeit\-räumen 15. - 31. Mai und 15. - 30. November, statt. Sie
+wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
+vom Vorstand einberufen.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung 
-von den Hausadministratoren durch Aushang im Vereinsanzeiger eingeladen.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung von
+den Hausadministratoren durch Aushang im Vereinsanzeiger eingeladen.}
 
-\Satz{3}{Die Hausadministratoren k"onnen eine au"serordentliche 
-Hausmitgliederversammlung einberufen. Sie m"ussen das innerhalb von drei 
-Wochen tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
+\Satz{3}{Die Hausadministratoren können eine außerordentliche
+Hausmitgliederversammlung einberufen. Sie müssen das innerhalb von drei Wochen
+tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 
 \end{Artikel}
 
@@ -405,52 +396,57 @@ Wochen tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 
 \begin{Artikel}{22}{Zusammmensetzung und Amtszeit}
 
-\Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, dem
-Schriftf"uhrer und einem technischen Vorstand zusammen.}
+\Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
+dem ersten und zweiten technischen Vorstand zusammen.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des
-Vorstandes l"auft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine
-Neuwahl erfolgt. Scheidet ein Mitglied w"ahrend der Amtsperiode aus, w"ahlt der
-Adminstratiorenrat f"ur die Zeit bis zur n"achsten Mitgliedervollversammlung
-ein Ersatzmitglied.}
+\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des Vorstandes
+läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine Neuwahl
+erfolgt. Scheidet ein Mitglied während der Amtsperiode aus, wählt der
+Adminstratiorenrat für die Zeit bis zur nächsten Mitgliedervollversammlung ein
+Ersatzmitglied.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
 \end{Artikel}
 
-\begin{Artikel}{23}{Gesch"aftsverteilung}
+\begin{Artikel}{23}{Geschäftsverteilung}
 
-\Satz{1}{Der Vorsitzende k"ummert sich um alle wichtigen Belange des 
-Vereins. Er koordiniert die Kontakte nach au"sen und beruft bei
-Bedarf Vorstandssitzungen ein.}
+\Satz{1}{Der Vorsitzende kümmert sich um alle wichtigen Belange des Vereins. Er
+koordiniert die Kontakte nach außen und beruft bei Bedarf Vorstandssitzungen
+ein. Er führt die Administratorenliste und sammelt und publiziert die
+Protokolle aller beschlußfassenden Gremien. Ferner sorgt er für die
+Verfügbarkeit aller gültigen Regelwerke des Vereins in der jeweils aktuellen
+Fassung.}
 
-\Satz{2}{Der Schatzmeister verwaltet alles Geldverm"ogen. Er ist 
-verantwortlich f"ur eine ordnungsgem"a"se Buchf"uhrung. Der Schatzmeister
-kann nicht gleichzeitig Administrator sein.}
+\Satz{2}{Der Schatzmeister verwaltet alles Geldvermögen. Er ist verantwortlich
+für eine ordnungsgemäße Buchführung. Er führt die Mitgliederliste. Er vertritt
+den Vorsitzenden, falls dieser verhindert ist. Der Schatzmeister kann nicht
+gleichzeitig Administrator sein.}
 
-\Satz{3}{Der technische Vorstand f"uhrt den Vorsitz im Administratorenrat.
-Er mu"s mindestens ein Jahr lang Administrator gewesen sein.}
+\Satz{3}{Der erste technische Vorstand führt den Vorsitz im Administratorenrat.
+Er muß mindestens ein Jahr lang Administrator gewesen sein.}
 
-\Satz{4}{Der Schriftf"uhrer f"uhrt die Mitglieder- und 
-Administratorenliste und sammelt und publiziert die Protokolle aller 
-beschlu"sfassenden Gremien. Ferner sorgt er f"ur die Verf"ugbarkeit
-aller g"ultigen Regelwerke des Vereins in der jeweils aktuellen Fassung. 
-Er vertritt den Vorsitzenden, falls dieser verhindert ist.}
+\Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
+technischen Vorstand in all seinen Aufgaben und ist stellvertretender
+Vorsitzender des Administratorenrates.}
 
 \end{Artikel}
 
 \begin{Artikel}{24}{Aufgaben}
 
-\Satz{1}{Die Vorst"ande sind die kaufm"annische und organisatorische 
-F"uhrung des Vereins. Sie haben auch im Falle ihrer Abwesenheit f"ur die 
-Abwicklung notwendiger Vorg"ange Sorge zu tragen.}
+\Satz{1}{Die Vorstände sind die kaufmännische und organisatorische 
+Führung des Vereins. Sie haben auch im Falle ihrer Abwesenheit für die 
+Abwicklung notwendiger Vorgänge Sorge zu tragen.}
 
-\Satz{2}{Die Vorst"ande sollen die Entwicklung des Vereins f"ordern und die
-finanzielle Stabilit"at sicherstellen.}
+\Satz{2}{Die Vorstände sollen die Entwicklung des Vereins fördern und die
+finanzielle Stabilität sicherstellen.}
 
 \Satz{3}{Ausgaben sind vom Vorstand zu bewilligen.
-Bei Ausgaben "uber 5.000 DM holt er die Genehmigung der 
+Bei Ausgaben über 5.000 DM holt er die Genehmigung der 
 Mitgliedervollversammlung ein.}
+
+\Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
+Netzwerkarchitektur sein.}
 
 \end{Artikel}
 
@@ -458,97 +454,93 @@ Mitgliedervollversammlung ein.}
 
 \begin{Artikel}{25}{Zusammensetzung}
 
-\Satz{1}{Mitglieder des Administratorenrates sind die Haus- und 
-Sonderadministratoren sowie ein Vertreter der Hausverwaltung. 
-Dieser mu"s nicht Vereinsmitglied sein.}
+\Satz{1}{Mitglieder des Administratorenrates sind die Haus- und
+Sonderadministratoren, die beiden technischen Vorstände sowie ein Vertreter der
+Hausverwaltung. Dieser muß nicht Vereinsmitglied sein.}
 
-\Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzul"assig.}
+\Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulässig.}
 
 \end{Artikel}
 
 \begin{Artikel}{26}{Aufgaben}
 
-\Satz{1}{Der Administratorenrat k"ummert sich um alle technischen Belange.}
+\Satz{1}{Der Administratorenrat kümmert sich um alle technischen Belange.}
 
-\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet
-die f"ur den Betrieb des Gesamtnetzes notwendigen Netzkomponenten.}
+\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die für
+den Betrieb des Gesamtnetzes notwendigen Netzkomponenten.}
 
-\Satz{3}{Der Administratorenrat bestreitet seine regelm"a"sigen Aufgaben
-mit einer Instandhaltungspauschale, deren H"ohe von der ordentlichen 
+\Satz{3}{Der Administratorenrat bestreitet seine regelmäßigen Aufgaben mit
+einer Instandhaltungspauschale, deren Höhe von der ordentlichen
 Mitgliedervollversammlung festgelegt wird.}
+
+\Satz{4}{Alle Administratoren stellen sicher, daß schnell auf alle für den
+normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 
 \end{Artikel}
 
-\begin{Artikel}{27}{Vorsitz}
+\begin{Artikel}{27}{Vorsitz und Einberufung}
 
-\Satz{1}{Der technische Vorstand ist Vorsitzender des Administratorenrats.}
+\Satz{1}{Der erste technische Vorstand ist Vorsitzender des
+Administratorenrats. Der zweite technische Vorstand ist stellvertretender
+Administratorenratsvorsitzender.}
 
-\Satz{2}{Der Vorsitzende des Administratorenrats soll jederzeit auf dem 
-aktuellen Stand der Netzwerkarchitektur sein. Er hat Rede- und Antragsrecht 
-bei Vorstandssitzungen.}
+\Satz{2}{Der Administratorenrat wird in der Regel vom technischen Vorstand
+einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
 
-\Satz{3}{Der Administratorenrat wird von seinem Vorsitzenden oder bei 
-Bedarf von einem Vorstandsmitglied einberufen.}
-
-\Satz{4}{Alle Administratoren stellen sicher, da"s schnell auf alle f"ur
-den normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
-
-\Satz{5}{Ist der Vorsitzende des Administratorenrats l"anger als drei
-Tage nicht erreichbar, so benennt er f"ur die Zeit seiner Abwesenheit
-einen Stellvertreter.}
+\Satz{3}{Der Administratorenrat muß auf Verlangen von 2 seiner Mitglieder
+innerhalb von 2 Wochen, auf Verlangen von 4 Hausadministratoren aus 4
+verschiedenen Häusern innerhalb einer Woche einberufen werden.}
 
 \end{Artikel}
 
 \begin{Artikel}{28}{Sonderadministratoren}
 
-\Satz{1}{Die Amtsperioden der Sonderadministratoren laufen vom 1. Juli bis
-31. Dezember und vom 1. Januar bis 30. Juni.}
+\Satz{1}{Die Amtsperioden der Sonderadministratoren laufen vom 1. Juli bis 31.
+Dezember und vom 1. Januar bis 30. Juni.}
 
 \Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung
-ge\-w"ahlt und durch Eintragung in die Administratorenliste durch den Vorstand
+ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
 bestellt.}
 
-\Satz{3}{Die Sonderadministratoren verf"ugen nicht "uber eigene Mittel.
-Instandhaltungsaufwendungen sind aus Mitteln der Instandhaltungspauschale 
-zu bestreiten und m"ussen beim Administratorenrat beantragt werden.
+\Satz{3}{Die Sonderadministratoren verfügen nicht über eigene Mittel. 
+Instandhaltungsaufwendungen sind aus Mitteln der Instandhaltungspauschale zu
+bestreiten und müssen beim Administratorenrat beantragt werden. 
 Neuanschaffungen bewilligt der Vorstand.}
 
-\Satz{4}{Ist ein Sonderadministratorenamt verwaist, kann der 
-Administratorenrat einen Kommissar einsetzen. Dieser hat im 
-Administratorenrat keine Stimme.}
+\Satz{4}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
+einen Kommissar einsetzen. Dieser hat im Administratorenrat keine Stimme.}
 
 \end{Artikel}
 
 
-\Abschnitt{Wenn alle Stricke rei"sen}
+\Abschnitt{Wenn alle Stricke reißen}
 
-\begin{Artikel}{29}{Satzungs"anderungen}
+\begin{Artikel}{29}{Satzungsänderungen}
 
-\Satz{1}{Satzungs"anderungen beschlie"st die Mitgliedervollversammlung mit 
+\Satz{1}{Satzungsänderungen beschließt die Mitgliedervollversammlung mit
 Zweidrittelmehrheit auf gemeinsamen Antrag von Vorstand und Administratorenrat
 oder von 15 v.H. der Mitglieder.}
 
-\Satz{2}{Die "Anderung ist im Vereinsregister einzutragen.}
+\Satz{2}{Die Änderung ist im Vereinsregister einzutragen.}
 
 \end{Artikel}
 
-\begin{Artikel}{30}{Aufl"osung}
+\begin{Artikel}{30}{Auflösung}
 
-\Satz{1}{Die Aufl"osung bestimmt sich nach den Regeln der Satzungs"anderung.}
+\Satz{1}{Die Auflösung bestimmt sich nach den Regeln der Satzungsänderung.}
 
-\Satz{2}{Bei Aufl"osung des Vereins f"allt das 
-Verm"ogen an das Studentenwerk M"unchen, Anstalt 
-des "offentlichen Rechts, mit der Ma"sgabe es unmittelbar und 
-ausschlie"slich im Sinn des Vereinszwecks zu verwenden.}
+\Satz{2}{Bei Auflösung des Vereins fällt das Vermögen an das Studentenwerk
+München, Anstalt des öffentlichen Rechts, mit der Maßgabe es unmittelbar und
+ausschließlich im Sinn des Vereinszwecks zu verwenden.}
 
 \end{Artikel}
 
-\begin{Artikel}{31}{"Ubergangsbestimmungen}
+\begin{Artikel}{31}{Vollzug bei Satzungsänderungen}
 
-Der Verein ist durch den Vorstand zur Eintragung in das Vereinsregister 
-anzumelden. Dem erstmaligen Vorsitzenden ist das Recht "ubertragen,
-etwaige Satzungs"anderungen, die der Registerrichter f"ur die Eintragung
-des Vereins verlangen sollte, vorzunehmen. 
+Die Satzungsänderung ist durch den Vorstand zur Eintragung in das
+Vereinsregister anzumelden. Dem Vorsitzenden ist das Recht übertragen, etwaige
+Satzungsänderungen, die das Registergericht für die Eintragung einer
+Satzungsänderung verlangen sollte, vorzunehmen.
 
 \end{Artikel}
 
