--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,21 @@
 #
-# $ProjectHeader: StuStaNet-Satzung 1.3 Fri, 25 Jun 1999 18:26:36 +0200 walterw $
-# $Revision: 1.8 $
+# $ProjectHeader: StuStaNet-Satzung 3.2 Fri, 02 Jul 1999 04:15:42 +0200 walterw $
+# $Revision: 1.12 $
 #
+
+02.07.1999	Wolfgang Walter
+	redaktionelle änderung: druckfehler in Art 10 Satz 5:
+		statt Satz 4 heiß es Absatz 5
+
+25.06.1999	Wolfgang Walter
+	Version gemäß der Satzungsänderung der Mitgliedervollversammlung vom
+		15.06.1999
+	Außerdem quelltext etwas reformariert (und alle "a -> ä, ...)
+	Status: gültig
+
+10.05.1999	Wolfgang Walter
+	Überarbeitung
+	Status: Entwurf
 
 11.12.1998	Wolfgang Walter
 	Formatierung verbessern - keine inhaltlichen änderungen
